docs/styles/theme.css
[data-md-color-scheme="slate"] {
  --md-hue: 218;
}

[data-md-color-primary="nose"] {
  --md-primary-fg-color:        rgba(149, 149, 47, 1);
  --md-primary-fg-color--light: rgba(199, 199, 59, 1);
  --md-primary-fg-color--dark:  rgba(99, 99, 31, 1);
}

[data-md-color-accent="skin"] {
  --md-accent-fg-color:        rgba(223, 71, 71, 1);
  --md-accent-fg-color--light: rgba(255, 95, 95, 1);
  --md-accent-fg-color--dark:  rgba(191, 47, 47, 1);
  --md-accent-bg-color:         rgba(33, 37, 41, 1);
  --md-accent-bg-color--light:  rgba(33, 37, 41, .8);
}

/* Indentation. */
div.doc-contents:not(.first) {
  padding-left: 25px;
  border-left: .05rem solid var(--md-typeset-table-color);
}

/* Mark external links as such. */
a.autorefs-external::after {
  /* https://primer.style/octicons/arrow-up-right-24 */
  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="rgb(0, 0, 0)" d="M18.25 15.5a.75.75 0 00.75-.75v-9a.75.75 0 00-.75-.75h-9a.75.75 0 000 1.5h7.19L6.22 16.72a.75.75 0 101.06 1.06L17.5 7.56v7.19c0 .414.336.75.75.75z"></path></svg>');
  content: ' ';

  display: inline-block;
  vertical-align: middle;
  position: relative;
  bottom: 0.1em;
  margin-left: 0.2em;
  margin-right: 0.1em;

  height: 0.7em;
  width: 0.7em;
  border-radius: 100%;
  background-color: var(--md-typeset-a-color);
}
a.autorefs-external:hover::after {
  background-color: var(--md-accent-fg-color);
}

